@@ -1,5 +1,5 @@
 // { dg-options "-pedantic" }
-// { dg-do compile { target { i?86-*-* && ilp32 } } }
+// { dg-do compile { target { { i?86-*-* x86_64-*-* } && ilp32 } } }
 // { dg-require-effective-target c++11 }
 
 struct A {
