@@ -1,4 +1,4 @@
-/* { dg-do compile { target i?86-*-* } } */
+/* { dg-do compile { target i?86-*-* x86_64-*-* } } */
 /* { dg-options "-O1 -fprefetch-loop-arrays -march=athlon" } */
 /* { dg-require-effective-target ilp32 } */
 
